# streaming-databricks

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
dynamic_pricing/: main.py
resources/: job.yml
